# Sidour-Avoda-website

./: .gitignore  DEPLOY.md  README.md
.github/workflows/: deploy-oracle-backend.yml
backend/: .env.example  alembic.ini  dev.db  requirements-load.txt  requirements.txt
backend/alembic/: env.py
backend/app/: ai_solver.py  auth.py  database.py  deps.py  main.py  models.py  public_workers.py  pwned_passwords.py  rate_limit.py  schemas.py  sites.py
backend/load/: locustfile.py  run-local.sh
backend/scripts/: README.md  create_director.py  import_sqlite_to_postgres.py  remove_duplicate_workers.py  set_missing_worker_passwords_to_phone.py  set_workers_password.py
backend/tests/: conftest.py  test_ai_solver.py  test_api_security.py  test_auth.py  test_auto_planning_scheduler.py  test_linked_global_caps.py  test_pwned_passwords.py  test_site_workers_count.py  test_worker_invites.py
deploy/oracle/: deploy-backend.sh  install-watchdog.sh  sidour-backend.service.snippet  sidour-watchdog.service  sidour-watchdog.timer  watchdog-backend.sh
frontend/: NATIVE.md
frontend/desktop/: .env.example  .gitignore  README.md  package-lock.json  package.json
frontend/desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/desktop/src-tauri/capabilities/: default.json
frontend/desktop/src-tauri/src/: lib.rs  main.rs
frontend/mobile/: .env.example  .gitignore  README.md  capacitor.config.json  package-lock.json  package.json  tsconfig.json
frontend/web/: jest.config.js  jest.setup.ts  next.config.ts  (+2 more)
neon-migrate/: .gitignore  local.env.example  migrate.sh
(+148 files in other folders)
