[package]
name = "giwan-sidour"
version = "1.0.0"
description = "גי וואן - סידור עבודה (desktop shell)"
authors = ["Sidour Avoda"]
edition = "2021"

[lib]
name = "giwan_sidour_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
